<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".activities.SplashScreenActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.skydoves.progressview.ProgressView
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pro_text"
        app:progressView_autoAnimate="true"
        app:progressView_colorBackground="@color/white"
        app:progressView_colorProgress="@color/red"
        app:progressView_duration="16000"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/black"
        app:progressView_labelSize="13sp"
        app:progressView_labelSpace="10dp"
        app:progressView_labelTypeface="bold"
        app:progressView_max="100"
        app:progressView_min="0"
        app:progressView_padding="1dp"
        app:progressView_progress="100"
        app:progressView_progressFromPrevious="true"
        app:progressView_radius="12dp" />

    <TextView
        android:id="@+id/pro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/pro_version"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/title_text"
        app:layout_constraintStart_toStartOf="@+id/title_text"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <TextView
        android:id="@+id/privacy_textbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/privacy_policy"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/app_icon"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/title_text"
        app:layout_constraintEnd_toEndOf="@+id/title_text"
        app:layout_constraintStart_toStartOf="@+id/title_text"
        tools:srcCompat="@drawable/app_icon"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>