<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        app:cpb_background_progressbar_color="@color/purple_200"
        app:cpb_background_progressbar_width="20dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="@color/red"
        app:cpb_progressbar_width="20dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/rounded_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners_white_back"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:scaleType="centerInside"
                android:scaleX="0.8"
                android:scaleY="0.8"
                app:srcCompat="@drawable/sync" />

            <TextView
                android:id="@+id/total_processes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="1385"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="1385" />

            <TextView
                android:id="@+id/runningProcTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/running_proc"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ramUsageTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1366/2GB"
                tools:text="1366/2GB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners_white_back"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/CPUimageView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:scaleType="centerInside"
                android:scaleX="0.8"
                android:scaleY="0.8"
                app:srcCompat="@drawable/cpu_icon" />

            <TextView
                android:id="@+id/ram_usage_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="72%" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ram_usage"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ramUsageTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="1366/2GB" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/optimizeButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_red"
        android:text="@string/optimize"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circularProgressBar" />

    <TextView
        android:id="@+id/storage_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/storage"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
        app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
        app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

    <TextView
        android:id="@+id/junk_size_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="1300MB"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/storage_textView"
        app:layout_constraintStart_toStartOf="@+id/storage_textView"
        app:layout_constraintTop_toBottomOf="@+id/storage_textView" />

    <TextView
        android:id="@+id/found_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/junk_size_textView"
        app:layout_constraintStart_toStartOf="@+id/junk_size_textView"
        app:layout_constraintTop_toBottomOf="@+id/junk_size_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>